@@ -1,3 +1,4 @@
+2466 [Update]             automatically download needed and missing packages after confirmation if the package was disabled
 2465 [Queue]              changed default main window size and queue column size
 2464 [x264]               fixed --sar detection for 720x480 if using the Blu-ray target device
 2463 [AVS Script Creator] improved anamorphic calculation. if the output DAR is the same as the input DAR 
